--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^10.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/bull": "^4.10.0",
     "@types/compression": "^1.7.5",
@@ -102,6 +103,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^4.0.1",
+    "cypress": "^15.6.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
