--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "graphql": "^16.11.0",
